--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
-title: Will Wang's Blog
+title: A Tai's Blog
 SEOTitle: 阿泰的技术专栏
 header-img: img/post-bg-index.jpg
-email: wzbcode@163.com
+email: 1277878200@qq.com
 description: "Every failure is leading towards success."
 keyword: "阿泰的技术专栏, Hongtai S, 孙宏泰, Java"
 url: "https://hongtai-s.github.io/"          # your host, for absolute URL
