--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ SEOTitle: 阿泰的技术专栏
 header-img: img/post-bg-index.jpg
 email: 1277878200@qq.com
 description: "Every failure is leading towards success."
-keyword: "阿泰的技术专栏, Hongtai S, 孙宏泰, Java"
+keyword: "阿泰的技术专栏, Hongtai S, 孙宏泰, Python"
 url: "https://hongtai-s.github.io/"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/Hongtai-S/Hongtai-S.github.io.git" # you code repository
