--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: A Tai's Blog
+title: 阿泰的技术专栏
 SEOTitle: 阿泰的技术专栏
 header-img: img/post-bg-index.jpg
 email: 1277878200@qq.com
