--- a/_config.yml
+++ b/_config.yml
@@ -91,8 +91,8 @@ service-worker: true
 
 # Friends
 friends: [
-{title: "书舟网",href: "http://kindle.archiew.top/"},
-{title: "阮一峰",href: "http://www.ruanyifeng.com/home.html"},
+{title: "ZYen",href: "https://zyen12138.github.io"},
+{title: "buzhifou",href: "https://www.52pojie.cn/?1215383"},
 {title: "阿里巴巴",href: "https://www.alibabagroup.com/cn/global/home"},
 {title: "腾讯",href: "https://www.tencent.com/zh-cn/index.html"},
 {title: "字节跳动",href: "https://www.bytedance.com/zh"}
